# cs-angular-shared-rust

./: package.json
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/ClassLibrary1/: ClassLibrary1.csproj
ConsoleApp1/ClassLibrary1/uniffi/: dotnet_uniffi.cs
ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  NativeMethods.g.cs  Program.cs
ConsoleApp1/ConsoleApp1/CsBindgen/: CSharpString.cs  NativeMethods.g.cs  RustString.cs  TestStructArray.cs
ConsoleApp1/ConsoleApp1/UniFFICs/: dotnet_uniffi.cs
ConsoleApp1/ConsoleApp2/: ConsoleApp2.csproj  Program.cs
ConsoleApp1/ConsoleApp2/Properties/: AssemblyInfo.cs
example-rust-lib/: Cargo.toml  Makefile.toml
example-rust-lib/core/: Makefile.toml
example-rust-lib/core/src/: lib.rs
example-rust-lib/dotnet/: Cargo.toml  Makefile.toml  build.rs
example-rust-lib/dotnet/src/: lib.rs
example-rust-lib/dotnet/src/array/: csharp_array.rs  mod.rs  rust_array.rs
example-rust-lib/dotnet/src/string/: csharp_string.rs  mod.rs  rust_string.rs
example-rust-lib/dotnet/src/test_case/: mod.rs
example-rust-lib/dotnet_uniffi/: Cargo.toml  Makefile.toml  uniffi.toml
example-rust-lib/dotnet_uniffi/src/: lib.rs
example-rust-lib/src/: lib.rs
example-rust-lib/uniffi/cs/: dotnet_uniffi.cs
example-rust-lib/wasm/: Cargo.toml  Makefile.toml
example-rust-lib/wasm/src/: lib.rs
projects/wasm-example/: package-lock.json  package.json
projects/wasm-example/src/: public-api.ts
web/: angular.json
web/projects/wasm-example/: package-lock.json
web2/: angular.json  package-lock.json  tsconfig.json
(+13 files in other folders)
