[package]
name = "dotnet_uniffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uniffi = { version = "0.25.0" }
core = {path = "../core"}

[profile.release]
overflow-checks = true
debug-assertions = true
lto = true

[profile.dev]
overflow-checks = false

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[dev-dependencies]
cargo-watch = "*"

[lib]
crate-type = ["cdylib"]

[bindings.csharp]
access_modifier = "public"
